--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyswitchbee"
-version = "1.7.16"
+version = "1.7.17"
 description = "SwitchBee Python Integration."
 readme = "README.md"
 authors = [{ name = "Jafar Atili", email = "at.jafar@outlook.com" }]
@@ -17,7 +17,7 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Typing :: Typed"
 ]
-dependencies = [ "aiohttp" ]
+dependencies = [ "aiohttp", "packaging"]
 requires-python = ">=3.9"
 
 [project.urls]
